2016-02-26  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha01 final changes';git push
	git tag -a 4.5.6-alpha01 -m 'Version 4.5.6-alpha01 new features: ncremap MPAS --rnr=0.0';git push --tags

	* ncremap: use ncatted to add _FillValue for MPAS

	* ncremap: make --rnr=0.0 default for MPAS

2016-02-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.5 final changes';git push
	git tag -a 4.5.5 -m 'Version 4.5.5 new features: ncremap CCW, gaa, -j, -P mpas; CDF5, mebs nrm, tabs, gaa ncatted ncrename, nces crd mtd';git push --tags

	* Add history attribute to maps produced by ncremap

2016-02-16  Charlie Zender  <zender@uci.edu>

	* Add nco_glb_att_add() and nco_vrs_att_cat() to ncatted, ncrename

2016-02-14  Charlie Zender  <zender@uci.edu>

	* Introduce tabs = total_absolute_value operator and add numerous nces/ncwa regression tests

2016-02-13  Charlie Zender  <zender@uci.edu>

	* Notice and fix mebs off-by-one error in tally accumulated in nco_opr_drv() (again affected ncra/nces not ncwa)

2016-02-12  Charlie Zender  <zender@uci.edu>

	* Tighten switch defaults for nco_op_typ

	* NCO 4.5.5-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.5-alpha07 final changes';git push
	git tag -a 4.5.5-alpha07 -m 'Version 4.5.5-alpha07 new features: ncremap zonal, ncra/nces mebs nrm, ncap2 ngt dmn idx, cygwin';git push --tags

	* Fix mebs normalization in ncra/nces. Previously mebs was not normalized and would just accumulate!
	Affected all previous version of ncra/nces but not ncwa. Problem reported by Will Koeppen.

	* Complete special-case zonal workflows (HIRDLS and MLS) in ncremap, nco_rgr.c

2016-02-11  Charlie Zender  <zender@uci.edu>

	* Add most of HIRDLS special case to ncremap

2016-02-11  Henry Butowsky  <henryb@hush.com>
